		System: simplified UI text in Parent Dashboard
        System: fixed a user photo upload issue involving usernames with a dot in them
		System: fixed issue preventing timezone string field description from being translated
		System: added timezones strings to translatable string list
		System: improved timezone selection process by using select instead of text field
		Activities: added notifications when students are bumped up into an activity on self unenrolment
		Activities: added logging of student activity changes in order to track sign up history
        Activities: added Activity Choices by Roll Group for ease of looking up student's activity times
		Activities: added Media bar to Description field in add and edit screens
		Attendance: added option for redirect to message wall after self registration has been taken
		Attendance: added year group selectors to reports for not present and not onsite
		Attendance: added ability for students to view their own attendance data for the current year
		Attendance: added ability to delete attendance with Manage Attendance Logs permission in Attendance by Person
		Finance: added logging for failed bulk email sends
		Form Group: added link to print listing of students in form group detail view
		Library: simplified interface for Duplicate in Manage Catalog
		Markbook: fixed multi-byte string length issue causing automatic comment expansion in Markbook view
		Messenger: added the ability to resend in By Roll Group view in View Send Report
		Messenger: added ability for uses with Manage Messages_all to resend on behalf of others
		Planner: fixed module name substitution in links in Lesson Planner
		Planner: added Smart Blocks tab to Unit Overview in Lesson Planner
		Staff: fixed bug in paramater passing in Add in Manage Staff
		Students: added sibling and family information to Letters Home by Roll Group
		Students: added Comment field to medical form, linked to student application form.